# helmet_synth_data_training

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  docker-compose.yml  helmet_chinstrap_vlm_design_v03_reviewed.md  pyproject.toml
.claude/: settings.local.json
config/: step_a.yaml  step_b.yaml  step_d.yaml
docker/step_a_imagegen/: Dockerfile  generate.py  requirements.txt
docker/step_b_screening/: Dockerfile  requirements.txt  screen_and_label.py  vllm_teacher.py
docker/step_d_finetune/: Dockerfile  finetune.py  requirements.txt
eval/edge_cases/: labels.csv
eval/test_real/: labels.csv
scripts/: build_dataset.py  evaluate.py  predict.py  run_loop.sh  setup_runpod.sh
seeds/: labels.csv
tests/: test_build_dataset.py  test_evaluate.py  test_finetune.py  test_imagegen.py  test_predict.py  test_screening.py  test_system.py
tests/fixtures/eval/: labels.csv
tests/fixtures/step_a/: labels.csv
tests/fixtures/step_b/: meta.csv  teacher_responses.jsonl
tests/fixtures/step_c/: labeled.jsonl
tests/fixtures/step_d/: train.jsonl
