[project]
name = "helmet-synth-data-training"
version = "0.1.0"
description = "Helmet chinstrap VLM self-improvement pipeline"
requires-python = ">=3.11"
dependencies = [
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "gpu: tests that require a GPU and heavy ML dependencies (torch, peft, transformers)",
]
addopts = "-m 'not gpu'"
